--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             height: 100vh;
         }
     </style>
+    <h1>Hello</h1>
     <div class="div__forEach">
         <button class="button">forEach</button>
     </div>
@@ -55,6 +56,7 @@
         <button class="button">reverse</button>
     </div>
     <script src="./script.js"></script>
+    <script src="./color-shades.js"></script>
 </body>
 
 </html>
