--- a/todolist-dom/test.html
+++ b/todolist-dom/test.html
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
     </head>
-
     <body>
-        <script src="./script.js"></script>
+        <script src="1.js"></script>
     </body>
 </html>
